# axum

./: .gitignore  Cargo.toml  DATABASE.md  QUICK_REFERENCE.md  README.md  docker-compose.yml
docs/: 01_domain_models.md  02_error_handling.md  03_configuration.md  04_jwt_and_passwords.md  05_repository_layer.md  06_auth_service.md  07_handlers_and_routes.md  08_auth_middleware.md  EMAIL_SERVICE_README.md  WEBSOCKET_TESTING_GUIDE.md  email_implementation_plan.md  email_testing_guide.md  github_setup.md  mentor_explanation.md  ownership_visualization.md  rate_limiting_design.md  technical_faq.md  websocket_implementation_plan.md
migrations/: 001_init.sql
src/: config.rs  error.rs  lib.rs  main.rs
src/domain/: models.rs
src/handlers/: auth.rs  mod.rs  user.rs  wallet.rs  web.rs  ws.rs
src/middleware/: auth.rs  rate_limit.rs
src/repository/: user_repo.rs
src/routes/: auth_routes.rs
src/services/: auth_service.rs  email_service.rs  mod.rs  notification_service.rs  wallet_service.rs
src/utils/: jwt.rs
templates/: base.html  dashboard.html  deposit.html  login.html  register.html  transactions.html  transfer.html  withdraw.html
