[package]
name = "my-fintech-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "rust_decimal" ] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
dotenvy = "0.15.7"
thiserror = "1.0.58"
anyhow = "1.0.81"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
rust_decimal = { version = "1.35", features = ["serde"] }
askama = "0.12"
askama_axum = "0.4"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
